# Squid-N

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/sc-app/: Cargo.toml
crates/sc-app/src/: app.rs  command.rs  lib.rs  main.rs
crates/sc-core/src/: model.rs
crates/sc-design-jp/src/: allowable_stress.rs  ds.rs  holding_capacity.rs  lib.rs  panel_shear.rs
crates/sc-element/src/: beam.rs  factory.rs  ms.rs
crates/sc-io/src/: scz.rs  stbridge.rs
crates/sc-load/src/: ai.rs  combo.rs  floor.rs
crates/sc-material/src/: hysteresis.rs  uniaxial.rs
crates/sc-mcp/src/: lib.rs
crates/sc-skeleton/src/: lib.rs
crates/sc-solver/src/: analysis.rs  assemble.rs  constraint.rs  eigen.rs  linear.rs  pushover.rs  (+1 more)
crates/squid-n-mcp/: Cargo.toml
crates/squid-n-mcp/src/: job.rs  lib.rs
dev_docs/: README.md  ROADMAP.md  ST-Bridge完全往復_申し送り.md  床（スラブ）設計.md
dev_docs/handoff/: TONMANUAL.md  UI導線改善.md  Zed風レイアウト改修.md  変形図の床追従とスケール改善_申し送り.md  応力図描画改善_申し送り.md  検定比可視化_申し送り.md  申し送り.md
dev_docs/specs/: P0_基盤.md  P1_線形要素.md  README.md  原典照合リスト.md  数量積算.md
dev_docs/v_and_v/: README.md  adversarial_review_2026-07.md  load_calculation_review.md  p3_review.md  p4_review.md  p7_review.md  p8_review.md  pending_items.md  剛性計算_参照実装照合.md  応力解析_参照実装照合.md  非線形モデル_参照実装照合.md
docs/: UI導線改善.md  introduction.md  model_io.md  result_view.md
docs/calc_basis/: README.md
docs/v_and_v/: README.md  p7_review.md  pending_items.md  剛性計算_RESP-D照合.md  終局検定_RESP-D照合.md  非線形動的解析_RESP-D照合.md
specs/: P1_線形要素.md  P3_最小UIと設計.md
v_and_v/: 剛性計算_参照実装照合.md
(+135 files in other folders)
