[package]
name = "squid-n-mcp"
version = "0.0.1"
edition = "2021"
license = "MIT"

[features]
default = []
mcp = ["dep:rmcp", "dep:tokio"]

[dependencies]
squid-n-core = { path = "../squid-n-core" }
squid-n-solver = { path = "../squid-n-solver" }
squid-n-io = { path = "../squid-n-io" }
squid-n-edit = { path = "../squid-n-edit" }
rmcp = { workspace = true, optional = true }
serde_json = { workspace = true }
# ワークスペース既定は schemars "0.8" だが、rmcp 1.x は内部で schemars "1" 系を使用しており、
# ツール引数（Parameters<T>）はそちらの JsonSchema を満たす必要がある。
# 本クレートの schemars::JsonSchema 派生は外部から要求されていないため、
# ワークスペース共通版に合わせず本クレートだけ "1" 系に固定して衝突を避ける。
schemars = "1"
tokio = { workspace = true, optional = true }
serde = { workspace = true }

[dev-dependencies]
smallvec = { workspace = true }